削弱了”冻结“DEBUFF，修改了使用冻结效果的卡牌和药水

--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -25,7 +25,7 @@
       "冻结"
     ],
     "PROPER_NAME": "冻结",
-    "DESCRIPTION": "被 #y冻结 的角色无法行动。 NL #y冻结 效果不能叠加。"
+    "DESCRIPTION": "1层：造成的伤害减少 25% NL 2层：受到的伤害增加 25% NL 3层：本回合无法行动。 NL #y冻结 效果最多叠加3层。"
   },
   {
     "NAMES": [
