--- a/src/main/resources/Jaina/localization/ZHS/keywords.json
+++ b/src/main/resources/Jaina/localization/ZHS/keywords.json
@@ -25,7 +25,7 @@
       "冻结"
     ],
     "PROPER_NAME": "冻结",
-    "DESCRIPTION": "1层：造成的伤害减少 25% NL 2层：受到的伤害增加 25% NL 3层：本回合无法行动。 NL #y冻结 效果最多叠加3层。"
+    "DESCRIPTION": "1层： #y攻击 造成的伤害减少 #b25% ； NL 2层：从 #y攻击 受到的伤害增加 #b25% ； NL 3层：本回合无法行动。 NL #y冻结 效果最多叠加3层。 NL 受到 #y燃烧 时解冻。"
   },
   {
     "NAMES": [
@@ -68,12 +68,5 @@
     ],
     "PROPER_NAME": "发现",
     "DESCRIPTION": "从三张卡牌中选择一张加入你的手牌。"
-  },
-  {
-    "NAMES": [
-      "烧伤"
-    ],
-    "PROPER_NAME": "烧伤",
-    "DESCRIPTION": "将若干张 #y灼烧 放入你的弃牌堆中。"
   }
 ]
