--- a/src/main/resources/Jaina/localization/ENG/cards.json
+++ b/src/main/resources/Jaina/localization/ENG/cards.json
@@ -1,11 +1,9 @@
 {
   "jaina:ApexisBlast": {
     "NAME": "Apexis Blast",
-    "DESCRIPTION": "Deal !D! damage. NL Draw !M! card (Affected by jaina:spell_force. )",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage. NL Draw !M! cards (Affected by jaina:spell_force. )",
+    "DESCRIPTION": "Deal !D! damage. NL Scry !M!. (Affected by jaina:spell_force. ) NL Draw a card.",
     "EXTENDED_DESCRIPTION": [
-      "(Draw %d cards.)",
-      "(Draw %d card.)"
+      "(Scry %d.)"
     ]
   },
   "jaina:ArcaneBlast": {
@@ -22,8 +20,7 @@
   },
   "jaina:ArcaneExplosion": {
     "NAME": "Arcane Explosion",
-    "DESCRIPTION": "Deal !D! damage to ALL enemies.",
-    "UPGRADE_DESCRIPTION": "Deal !D! damage to ALL enemies. NL Draw !M! card."
+    "DESCRIPTION": "Deal !D! damage to ALL enemies."
   },
   "jaina:ArcaneGate": {
     "NAME": "Arcane Gate",
@@ -44,11 +41,12 @@
   },
   "jaina:ArcticArmor": {
     "NAME": "Arctic Armor",
-    "DESCRIPTION": "Whenever you play a jaina:Frost card, gain !M! Block."
+    "DESCRIPTION": "Whenever you play a jaina:Frost card, gain !M! Block.",
+    "UPGRADE_DESCRIPTION": "Innate. NL Whenever you play a jaina:Frost card, gain !M! Block."
   },
   "jaina:Blizzard": {
     "NAME": "Blizzard",
-    "DESCRIPTION": "Deal !D! damage and jaina:freeze ALL enemies."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:frozen to ALL enemies."
   },
   "jaina:BookOfSpecters": {
     "NAME": "Book of Specters",
@@ -56,7 +54,7 @@
   },
   "jaina:BreathOfSindragosa": {
     "NAME": "Breath of Sindragosa",
-    "DESCRIPTION": "Deal !D! damage and jaina:freeze a random enemy."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:frozen to a random enemy."
   },
   "jaina:CabalistsTome": {
     "NAME": "Cabalist's Tome",
@@ -64,19 +62,20 @@
   },
   "jaina:Cinderstorm": {
     "NAME": "Cinderstorm",
-    "DESCRIPTION": "Exhaust all *Burns in your hand. NL Apply !M! jaina:Combustion for each card exhausted this way."
+    "DESCRIPTION": "Apply !M! jaina:Burning to a random enemy 5 times."
   },
   "jaina:Combustion": {
     "NAME": "Combustion",
-    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Combustion to all enemies not targeted by this card."
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Burning to ALL enemies."
   },
   "jaina:ConeOfCold": {
     "NAME": "Cone of Cold",
-    "DESCRIPTION": "Deal !D! damage to ALL enemies. NL Gain !B! Block."
+    "DESCRIPTION": "Deal !D! damage to ALL enemies. NL Gain !B! Block for every jaina:frozen enemy damaged this way."
   },
   "jaina:ConjureManaBiscuit": {
     "NAME": "Conjure Mana Biscuit",
-    "DESCRIPTION": "Add a *Mana *Biscuit that grants [E] [E] into your hand."
+    "DESCRIPTION": "Add a *Mana *Biscuit that grants [E] into your hand.",
+    "UPGRADE_DESCRIPTION": "Add a *Mana *Biscuit+ that grants [E] [E] into your hand."
   },
   "jaina:CounterAttack": {
     "NAME": "Counter Attack",
@@ -110,12 +109,15 @@
   },
   "jaina:DeepFreeze": {
     "NAME": "Deep Freeze",
-    "DESCRIPTION": "jaina:Freeze ALL enemies. NL Whenever you jaina:freeze an enemy, gain [E] and draw 1 card. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "jaina:Freeze ALL enemies. NL Whenever you jaina:freeze an enemy, gain [E] and draw 1 card."
+    "DESCRIPTION": "Apply 3 jaina:frozen to ALL enemies. NL Whenever you apply 1 jaina:frozen to an enemy, gain [E] and draw 1 card. NL Exhaust."
   },
   "jaina:Defend": {
     "NAME": "Defend",
     "DESCRIPTION": "Gain !B! Block."
+  },
+  "jaina:DevolvingMissiles": {
+    "NAME": "Devolving Missiles",
+    "DESCRIPTION": "Deal !D! damage and apply !M! Weak to a random enemy 3 times."
   },
   "jaina:DragonsBreath": {
     "NAME": "Dragon's Breath",
@@ -123,7 +125,7 @@
   },
   "jaina:DragonsFury": {
     "NAME": "Dragon's Fury",
-    "DESCRIPTION": "Deal !D! damage X times. NL jaina:Burnt: *X."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:Burning to ALL enemies X times."
   },
   "jaina:Duplicate": {
     "NAME": "Duplicate",
@@ -139,15 +141,15 @@
   },
   "jaina:ExplosiveRunes": {
     "NAME": "Explosive Runes",
-    "DESCRIPTION": "Deal !D! damage. NL If the target is a *minion, deal double damage. NL If this kills a *minion, any overkill damage is dealt to ALL enemies."
+    "DESCRIPTION": "The next time you are attacked, deal !D! damage to the attacker and add this card into your discard pile."
   },
   "jaina:Fireball": {
     "NAME": "Fireball",
-    "DESCRIPTION": "Deal !D! damage. NL jaina:Burnt: *1."
+    "DESCRIPTION": "Deal !D! damage."
   },
   "jaina:Fireblast": {
     "NAME": "Fireblast",
-    "DESCRIPTION": "Deal !D! damage. NL jaina:Burnt: *1."
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Burning."
   },
   "jaina:FirstFlame": {
     "NAME": "First Flame",
@@ -156,37 +158,35 @@
   },
   "jaina:FlameLance": {
     "NAME": "Flame Lance",
-    "DESCRIPTION": "Deal !D! damage. NL If this deals unblocked damage, apply !M! jaina:Combustion. NL jaina:Burnt: *1."
+    "DESCRIPTION": "Deal !D! damage. NL If this deals locked damage, apply !M! jaina:Burning as that much."
   },
   "jaina:FlameWard": {
     "NAME": "Flame Ward",
-    "DESCRIPTION": "Gain !B! Block. NL Whenever you are attacked, apply !M! jaina:Combustion to ALL enemies."
+    "DESCRIPTION": "Whenever you are attacked, apply !M! jaina:Burning to ALL enemies."
   },
   "jaina:Flamecannon": {
     "NAME": "Flamecannon",
-    "DESCRIPTION": "Deal !D! damage to a random enemy. NL jaina:Combustion: *1."
+    "DESCRIPTION": "Deal !D! damage and apply jaina:Burning to a random enemy."
   },
   "jaina:Flamestrike": {
     "NAME": "Flamestrike",
-    "DESCRIPTION": "Deal !D! damage to ALL enemies twice. NL jaina:Burnt: *2."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:Burning to ALL enemies."
   },
   "jaina:FontOfPower": {
     "NAME": "Font of Power",
     "DESCRIPTION": "Gain !M! [E] . NL (Affected by jaina:spell_force. ) NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Gain !M! [E] . NL (Affected by jaina:spell_force. )",
     "EXTENDED_DESCRIPTION": [
-      "(Gain %d [E] .)",
       "(Gain %d [E] .)"
     ]
   },
   "jaina:ForbiddenFlame": {
     "NAME": "Forbidden Flame",
-    "DESCRIPTION": "Deal X times !D! damage. NL jaina:Burnt: *X."
+    "DESCRIPTION": "Deal X times !D! damage. NL Apply X times !M! jaina:Burning."
   },
   "jaina:FrostAffinity": {
     "NAME": "Frost Affinity",
-    "DESCRIPTION": "This turn, your next jaina:Frost card cost 2 less [E] . NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "This turn, your next jaina:Frost card cost 2 less [E] ."
+    "DESCRIPTION": "This turn, your next jaina:Frost card cost [E] [E] less. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "This turn, your next jaina:Frost card cost [E] [E] less."
   },
   "jaina:FrostArmor": {
     "NAME": "Frost Armor",
@@ -194,12 +194,12 @@
   },
   "jaina:FrostNova": {
     "NAME": "Frost Nova",
-    "DESCRIPTION": "jaina:Freeze ALL enemies. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "jaina:Freeze ALL enemies."
+    "DESCRIPTION": "Apply !M! jaina:Frozen to ALL enemies. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Apply !M! jaina:Frozen to ALL enemies."
   },
   "jaina:Frostbolt": {
     "NAME": "Frostbolt",
-    "DESCRIPTION": "Deal !D! damage and jaina:freeze an enemy."
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Frozen."
   },
   "jaina:FrozenClone": {
     "NAME": "Frozen Clone",
@@ -208,7 +208,7 @@
   },
   "jaina:FrozenTouch": {
     "NAME": "Frozen Touch",
-    "DESCRIPTION": "Deal !D! damage and jaina:freeze an enemy. Exhausts after being played !M! times.",
+    "DESCRIPTION": "Deal !D! damage and jaina:freeze an enemy. Exhausts after being played !M! times. NL Return to your hand after played.",
     "EXTENDED_DESCRIPTION": [
       "(%d uses left.)"
     ]
@@ -219,7 +219,7 @@
   },
   "jaina:HotStreak": {
     "NAME": "Hot Streak",
-    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:Combustion to an enemy. NL If the last card played this combat was a jaina:Fire card, gain [E] ."
+    "DESCRIPTION": "Deal !D! damage and apply !M! jaina:Burning to an enemy. NL If the last card played this combat was a jaina:Fire card, gain [E] ."
   },
   "jaina:IceBarrier": {
     "NAME": "Ice Barrier",
@@ -231,11 +231,11 @@
   },
   "jaina:IceLance": {
     "NAME": "Ice Lance",
-    "DESCRIPTION": "Deal !D! damage to a jaina:frozen enemy. NL If the target is not jaina:frozen, jaina:freeze it and exhaust."
+    "DESCRIPTION": "Deal !D! damage to a jaina:frozen enemy, else apply !M! jaina:Frozen to it and exhaust."
   },
   "jaina:IceShard": {
     "NAME": "Ice Shard",
-    "DESCRIPTION": "Add !M! *Shards into your hand. NL Exhaust."
+    "DESCRIPTION": "Add !M! *Ice *Lance into your hand. NL Exhaust."
   },
   "jaina:IceShardToken": {
     "NAME": "Shard",
@@ -247,11 +247,11 @@
   },
   "jaina:Icicle": {
     "NAME": "Icicle",
-    "DESCRIPTION": "Draw a card. NL Deal !D! damage if the enemy is jaina:frozen."
+    "DESCRIPTION": "Deal !D! damage. NL Draw a card if the enemy is jaina:frozen."
   },
   "jaina:Ignite": {
     "NAME": "Ignite",
-    "DESCRIPTION": "Trigger jaina:Combustion on ALL enemies."
+    "DESCRIPTION": "Trigger jaina:Burning on ALL enemies."
   },
   "jaina:IncantersFlow": {
     "NAME": "Incanter's Flow",
@@ -260,7 +260,7 @@
   "jaina:MagicTrick": {
     "NAME": "Magic Trick",
     "DESCRIPTION": "jaina:Discover a non-Rare card that costs 1. NL It costs 0 this turn. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "jaina:Discover a non-Common card that costs 1. NL It costs 0 this turn. NL Exhaust."
+    "UPGRADE_DESCRIPTION": "jaina:Discover a upgraded non-Rare card that costs 1. NL It costs 0 this turn. NL Exhaust."
   },
   "jaina:ManaBind": {
     "NAME": "Mana Bind",
@@ -269,17 +269,12 @@
   },
   "jaina:ManaBiscuit": {
     "NAME": "Mana Biscuit",
-    "DESCRIPTION": "Retain. NL Gain [E] [E]. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Retain. NL Gain [E] [E] [E]. NL Exhaust."
+    "DESCRIPTION": "Retain. NL Gain [E] . NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Retain. NL Gain [E] [E] . NL Exhaust."
   },
   "jaina:Meteor": {
     "NAME": "Meteor",
-    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Combustion to EVERYONE."
-  },
-  "jaina:MirrorEntity": {
-    "NAME": "Mirror Entity",
-    "DESCRIPTION": "Deal damage equal to the enemy's attack intent amount. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Deal damage equal to the enemy's attack intent amount."
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Burning to ALL enemies."
   },
   "jaina:MirrorImage": {
     "NAME": "Mirror Image",
@@ -297,7 +292,7 @@
   },
   "jaina:Pyroblast": {
     "NAME": "Pyroblast",
-    "DESCRIPTION": "Deal !D! damage. NL jaina:Burnt: *3."
+    "DESCRIPTION": "Deal !D! damage. NL Apply !M! jaina:Burning."
   },
   "jaina:RayOfFrost": {
     "NAME": "Ray of Frost",
@@ -305,7 +300,7 @@
   },
   "jaina:Scorch": {
     "NAME": "Scorch",
-    "DESCRIPTION": "Apply !M! jaina:Combustion. NL Increase the jaina:Combustion of ALL *Scorches by 2 this combat."
+    "DESCRIPTION": "Apply !M! jaina:Burning. NL Increase the jaina:Burning of ALL *Scorches by 2 this combat."
   },
   "jaina:ScrollOfWonder": {
     "NAME": "Scroll of Wonder",
@@ -340,8 +335,8 @@
   },
   "jaina:Simulacrum": {
     "NAME": "Simulacrum",
-    "DESCRIPTION": "Choose !M! card from your draw pile. NL Add a copy of that card with Exhaust into your hand.",
-    "UPGRADE_DESCRIPTION": "Choose !M! cards from your draw pile. NL Add a copy of those cards with Exhaust into your hand.",
+    "DESCRIPTION": "Choose !M! card from your draw pile. NL Add a copy of that card with Exhaust into your hand. NL Exhaust.",
+    "UPGRADE_DESCRIPTION": "Choose !M! cards from your draw pile. NL Add a copy of those cards with Exhaust into your hand. NL Exhaust.",
     "EXTENDED_DESCRIPTION": [
       "[Illusion]",
       " NL Exhaust."
@@ -370,17 +365,15 @@
   },
   "jaina:Vaporize": {
     "NAME": "Vaporize",
-    "DESCRIPTION": "Gain !B! Block. NL Whenever you are attacked, deal that much damage to the attacker."
+    "DESCRIPTION": "Gain !B! Block. NL The next time you are attacked, deal that much damage to the attacker."
   },
   "jaina:Wildfire": {
     "NAME": "Wildfire",
-    "DESCRIPTION": "Whenever you apply jaina:Combustion, apply 3 more.",
-    "UPGRADE_DESCRIPTION": "Whenever you apply jaina:Combustion, apply twice as much."
+    "DESCRIPTION": "Whenever you apply jaina:Burning, apply !M! more."
   },
   "jaina:Wish": {
     "NAME": "Wish",
-    "DESCRIPTION": "Choose a spell card to add into your hand. NL It costs 0 this turn. NL Exhaust.",
-    "UPGRADE_DESCRIPTION": "Choose an upgraded spell card to add into your hand. NL It costs 0 this turn. NL Exhaust."
+    "DESCRIPTION": "Choose a spell card to add into your hand. NL It costs 0 this turn. NL Exhaust."
   },
   "jaina:WizardArmor": {
     "NAME": "Wizard Armor",
