--- a/src/main/resources/Jaina/localization/ENG/powers.json
+++ b/src/main/resources/Jaina/localization/ENG/powers.json
@@ -11,8 +11,8 @@
       "Gain %d Block whenever you play a #bFrost card."
     ]
   },
-  "jaina:CombustionPower": {
-    "NAME": "Combustion",
+  "jaina:BurningPower": {
+    "NAME": "Burning",
     "DESCRIPTIONS": [
       "At the end of turn, this creature loses #b%d HP."
     ]
@@ -26,7 +26,7 @@
   "jaina:FlameWardPower": {
     "NAME": "Flame Ward",
     "DESCRIPTIONS": [
-      "Whenever you are attacked, apply #b%d #rCombustion to the attacker."
+      "Whenever you are attacked, apply #b%d #yBurning  to the attacker."
     ]
   },
   "jaina:FrostAffinityPower": {
@@ -38,7 +38,11 @@
   "jaina:FrozenPower": {
     "NAME": "Frozen",
     "DESCRIPTIONS": [
-      "Stilled by ice and may not act. This effect can NOT stack."
+      "#yAttacks deal #b25% less damage. NL ",
+      "Receive #b25% more damage from #yAttacks. NL ",
+      "Stilled by ice and may not act. NL ",
+      "This effect stacks up to 3. NL ",
+      "Removes when this creature's #yburning."
     ]
   },
   "jaina:IceBlockPower": {
@@ -82,16 +86,13 @@
   "jaina:VaporizePower": {
     "NAME": "Vaporize",
     "DESCRIPTIONS": [
-      "Whenever you are attacked, deal that much damage to the attacker. Reduced by #b1 for each incoming hit.",
-      "Vaporize+"
+      "Whenever you are attacked, deal that much damage to the attacker. Reduced by #b1 for each incoming hit."
     ]
   },
   "jaina:WildfirePower": {
     "NAME": "Wildfire",
     "DESCRIPTIONS": [
-      "Whenever you apply #rCombustion, apply #b3 more.",
-      "Wildfire+",
-      "Whenever you apply #rCombustion, apply #b2x as much."
+      "Whenever you apply #yBurning , apply #b%d more."
     ]
   },
   "jaina:WizardArmorPower": {
