--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -30,12 +30,11 @@
       "Fire": "火焰",
       "Frozen": "冻结",
       "spell_force": "法术强度",
-      "Combustion": "燃烧",
+      "Burning": "燃烧",
       "Purge": "即逝",
       "Autoplay": "自动释放",
       "Buffer": "缓冲",
-      "Discover": "发现",
-      "Burnt": "烧伤"
+      "Discover": "发现"
     }
   }
 }
