人物改动：初始血量由60提高到65 卡牌改动： 埃匹希斯冲击：伤害8(10)->10(13)，预见2(3)->3(5) 怨灵之书：抽牌5->4 冰龙吐息：伤害4->7 点燃：触发燃烧效果时不会去除燃烧效果 冰锥术：伤害3(5)->3(4)，格挡2(3)->4(6)，触发条件改为“对敌人造成伤害” 法术反制：耗能2->3 复制：稀有度罕见->稀有 爆炸符文：受到多次攻击只会给予一张牌 炎枪术：不会错误地给予“灼烧”了，不会给予0层燃烧效果了 烈焰风暴：耗能2->1，伤害4(6)->6(8)，燃烧4(2)->3(4) 火焰结界：重做：改为“每给予1层燃烧就获得1层格挡” 陨石术：稀有度稀有->罕见 传承之火：现在会抽一张牌。 护盾术：升级后的格挡值从8变为9，抽牌数不再升级 蒸发：格挡4(6)->5(8)

--- a/src/main/resources/Jaina/localization/ENG/cards.json
+++ b/src/main/resources/Jaina/localization/ENG/cards.json
@@ -70,7 +70,7 @@
   },
   "jaina:ConeOfCold": {
     "NAME": "Cone of Cold",
-    "DESCRIPTION": "Deal !D! damage to ALL enemies. NL Gain !B! Block for every jaina:Frozen enemy damaged this way."
+    "DESCRIPTION": "Deal !D! damage to ALL enemies. NL Gain !B! Block for every enemy damaged this way."
   },
   "jaina:ConjureManaBiscuit": {
     "NAME": "Conjure Mana Biscuit",
@@ -162,7 +162,7 @@
   },
   "jaina:FlameWard": {
     "NAME": "Flame Ward",
-    "DESCRIPTION": "Whenever you are attacked, apply !M! jaina:Burning to ALL enemies."
+    "DESCRIPTION": "Whenever you apply 1 jaina:Burning to an enemy, gain 1 block."
   },
   "jaina:Flamecannon": {
     "NAME": "Flamecannon",
@@ -308,7 +308,7 @@
   },
   "jaina:SecondFlame": {
     "NAME": "Second Flame",
-    "DESCRIPTION": "Retain. NL Deal !D! damage. NL Exhaust."
+    "DESCRIPTION": "Retain. NL Deal !D! damage. NL Draw a card. NL Exhaust."
   },
   "jaina:ShatteringBlast": {
     "NAME": "Shattering Blast",
