--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -70,7 +70,7 @@
   },
   "jaina:ConeOfCold": {
     "NAME": "冰锥术",
-    "DESCRIPTION": "对所有敌人造成 !D! 点伤害。 NL 每对一个具有 jaina:冻结 的敌人造成伤害，获得 !B! 点 格挡 。"
+    "DESCRIPTION": "对所有敌人造成 !D! 点伤害。 NL 每对一名敌人造成伤害，获得 !B! 点 格挡 。"
   },
   "jaina:ConjureManaBiscuit": {
     "NAME": "制造法力饼干",
@@ -161,7 +161,7 @@
   },
   "jaina:FlameWard": {
     "NAME": "火焰结界",
-    "DESCRIPTION": "每当受到攻击，给予所有敌人 !M! 层 jaina:燃烧 。"
+    "DESCRIPTION": "每当你给予敌人1层 jaina:燃烧 ，获得1点 格挡 。"
   },
   "jaina:Flamecannon": {
     "NAME": "烈焰轰击",
@@ -304,7 +304,7 @@
   },
   "jaina:SecondFlame": {
     "NAME": "传承之火",
-    "DESCRIPTION": "保留 。 NL 造成 !D! 点伤害。 NL 消耗 。"
+    "DESCRIPTION": "保留 。 NL 造成 !D! 点伤害。 NL 抽一张牌。 NL 消耗 。"
   },
   "jaina:ShatteringBlast": {
     "NAME": "冰爆冲击",
