裂魂残像：现在会正确地给予无实体了 火焰结界：现在会正确地显示描述和正确地进行叠加了 冰冻药水：修正了描述 冻寒之触：现在会正确地升级使用次数了

--- a/src/main/resources/Jaina/localization/ENG/potions.json
+++ b/src/main/resources/Jaina/localization/ENG/potions.json
@@ -26,11 +26,10 @@
       " #yDiscover #b2 #yFrost cards. They cost #b0 this turn."
     ]
   },
-  "jaina:FrozenPotion": {
+  "jaina:FreezingPotion": {
     "NAME": "Freezing Potion",
     "DESCRIPTIONS": [
-      "#yFreeze an enemy.",
-      "#yFreeze an enemy, and freeze another random enemy."
+      "Apply #b%d Freeze to an enemy."
     ]
   },
   "jaina:IllusionPotion": {
